# next_dwm_status

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: barBase.hpp  barManager.hpp  barPerSeconds.hpp  battery.hpp  cpu.hpp  memery.hpp  network.hpp  updateCheckerUbuntu.hpp  volume.h  volume.hpp  volumeBar.hpp
src/exe/: status.cpp  volume_test.cpp
src/lib/: volume.c  volume.cpp
